Set the jwt token life to 15 minutes and implemented a refresh token mechanism that has a life of 5 days.
